# wirover-core

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh  config.h.in  configure  docker-compose.yml  install_dependencies.sh
common/: bandwidth.c  bandwidth.h  callback.h  configuration.c  configuration.h  contchan.c  contchan.h  debug.c  debug.h  interface.c  interface.h  ipaddr.c  ipaddr.h  kernel.c  kernel.h  netlink.c  netlink.h  pathperf.c  ping.c  ping.h  remote_nodes.c  remote_nodes.h  rootchan.c  rootchan.h  rwlock.c  rwlock.h  sockets.c  sockets.h  timing.c  timing.h  tunnel.h  version.h  virtInterface.c  virtInterface.h
config/wicontroller/: wirover
config/wigateway/: wirover
python/: setup.py  wirover.py
schemas/: monitoring.sql  wiroot.sql  zzz-privileges.sql
scripts/: wirover_runonce.sh  wirover_wrapper.sh
scripts/wicontroller/: wicontroller_config
scripts/wigateway/: wigateway_config
snap/: snapcraft.yaml
snap/hooks/: configure  install
src/: CMakeLists.txt  config.h.in
src/common/: active_bw.h  bandwidth.c  bandwidth.h  callback.c  circular_buffer.c  circular_buffer.h  circular_counter.c  circular_counter.h  configuration.c  configuration.h  constants.h  contChan.h  contchan.h  datapath.c  datapath.h  debug.c  debug.h  evdo_buffer.c  evdo_buffer.h  flowTable.c  flowTable.h  flow_table.c  flow_table.h  format.c  format.h  handleTransfer.c  headerParse.c  headers.c  headers.h  interface.c  interface.h  kernel.c  link.c  link_priority.h  myssl.c  netlink.c  netlink.h  packet.c  packet.h  packetBuffer.c  (+49 more)
src/common/policy/: index.html  policy.c  policyFunctions.c  policy_table_out.txt  vpolicy
src/policy/: CMakeLists.txt  policyTable.c  policyTable.h  vpolicy.c
src/wicontroller/: .contChan.c.swp  CMakeLists.txt  Dockerfile  Makefile  README  active_bw.c  algoPerConnWrr.c  bandwidth.c  contChan.c  contchan.c  database.c  database.h  dbq.c  dbq.h  gateway.h  gatewayUpdater.c  main.c  my.cnf  ping.c  selectInterface.c  selectInterface.h  select_interface.c  udp_ping.c  wicontroller.c  wicontroller.conf  wicontroller_init  wicontroller_upstart.conf
src/wigateway/: CMakeLists.txt  Dockerfile  Makefile  README  active_bw.c  arguments.c  arguments.h  bandwidth.c  contChan.c  contchan.c  datapath.c  datapath.h  gpsHandler.c  gpsHandler.h  gps_handler.c  gps_handler.h  icmp_ping.c  icmp_ping.h  interface.c  main.c  netlink.c  netlink.h  pcapSniff.c  ping.c  ppp.c  ppp.h  run_wigateway  scan.c  scan.h  selectInterface.c  selectInterface.h  select_interface.c  state.h  transfer.c  udp_ping.c  wigateway.c  wigateway.conf  wigateway_init  wigateway_upstart.conf
src/wiroot/: CMakeLists.txt  Dockerfile  controllers.c  controllers.h  database.c  database.h  lease.c  lease.h  tables.sql  wiroot.c  wiroot.conf  wiroot_upstart.conf
src_old/: CMakeLists.txt
src_old/common/: contChan.h  debug.h  flowTable.h  handleTransfer.h  headerParse.h  ipaddr.c  ipaddr.h  link.c  link.h  link_priority.c  myssl.h  packet_debug.c  packet_debug.h  passive_bw.c  passive_bw.h  policyRet.c  policyRet.h  sockets.h  special.c  time_utils.c  time_utils.h  tunnelInterface.h  utils.c  utils.h
src_old/common/policy/: Makefile  policyFunctions.h  policyTypes.h
src_old/wicontroller/: CMakeLists.txt  INSTALL  active_bw.c  contChan.c  gatewayUpdater.c  gatewayUpdater.h  main.c  selectInterface.c  selectInterface.h
src_old/wigateway/: CMakeLists.txt  INSTALL  active_bw.c  algoPerConnWrr.c  contChan.c  interface.c  netlink.c  pcapSniff.h  selectInterface.h  transfer.h
wicontroller/: CMakeLists.txt  bandwidth.c  contchan.c  database.c  database.h  dbq.c  dbq.h  gateway.c  gateway.h  monitoring.sql  ping.c  wicontroller.c  wicontroller.conf
wigateway/: CMakeLists.txt  arguments.c  bandwidth.c  contchan.c  gps_handler.c  gps_handler.h  ping.c  wigateway.c  wigateway.conf
wiroot/: CMakeLists.txt  controllers.c  controllers.h  database.c  database.h  lease.c  lease.h  test.c  wiroot.c  wiroot.conf
